# mcp_begin

./: .gitignore  README.md  codex-mcp-config.json  pyproject.toml
src/: http_client.py  logger.py  server.py
tests/unit/: test_logger.py
